.gitops/develop/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: business-app
spec:
  selector:
    app.kubernetes.io/name: business-app
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
